bugfix approve route
